
------------------------------------------------------------------------
r1112 | gaser | 2017-02-24 12:13:25 +0100 (Fr, 24 Feb 2017) | 15 lines

Changed paths:
M       CHANGES.txt
M       cat_conf_extopts.m
M       cat_conf_stools.m
M       cat_conf_tools.m
M       cat_defaults.m
M       cat_stat_spm2x.m
M       cat_surf_results.m

(1) Changed: APP is now disabled by default, because for "normal" data there 
    seems to be no improvement. Use that option if something fails with your 
    initial affine registration.
(2) Changed: Some minor changes in help text.
(3) Fixed: Check for surface files in cat_stat_spm2x.m

------------------------------------------------------------------------
r1113 | gaser | 2017-03-01 15:43:36 +0100 (Mi, 01 Mär 2017) | 9 lines

Changed paths:
M       CHANGES.txt
M       Contents.m
M       cat_surf_createCS.m
M       html/cat.html

(1) Changed: Removed Convexity Smoothing in cat_surf_createCS.m that wasn't an
    improvement for many data.

------------------------------------------------------------------------
r1114 | gaser | 2017-03-02 11:46:01 +0100 (Do, 02 Mär 2017) | 15 lines

Changed paths:
M       CHANGES.txt
M       Contents.m
M       cat12.fig
M       cat_batch_long.m
M       cat_conf_long.m
M       cat_long_main.m
M       cat_long_multi_run.m
M       cat_surf_results.m
M       html/cat.html
M       tbx_cfg_cat.m

Changed: Added option to save deformations in longitudinal pipeline (useful for
applying the deformations to coregistered data).

------------------------------------------------------------------------

Changed paths:
M       CHANGES.txt
M       cat_conf_stools.m
M       cat_plot_boxplot.m
M       cat_stat_check_cov.m
M       cat_surf_createCS.m

(1) Changed: Parameter for topology corrections are slightly changed to force filling.
(2) Fixed: Some smaller errors in cat_stat_check_cov.m for surfaces.
------------------------------------------------------------------------
r1115 | gaser | 2017-03-10 09:48:57